--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 Sylvain Vasseur
   <img src="workplace.jpg" alt="Workplace" usemap="#workmap">
 
-<map name="workmap">
-  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
-  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
-  <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm">
-</map>
+<p><img src="https://gph.is/2geoZie" alt="Smiley face" style="float:right;width:42px;height:42px;">
+The image will float to the right of the text.</p>
 </body>
 </html>
