--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <header><title>Sylvain Vasseur</title></header>
 <body>
 Sylvain Vasseur
-  <img src="workplace.jpg" alt="Workplace" usemap="#workmap">
 
-<p><img src="https://gph.is/2geoZie" alt="Smiley face" style="float:right;width:42px;height:42px;">
-The image will float to the right of the text.</p>
+<video width="320" height="240" controls>
+  <source src="  https://giphy.com/gifs/xT9IgtE2Dors136a1W/html5">
+Your browser does not support the video tag.
+</video>
 </body>
 </html>
